Fix hang when replaying video

Move video_mutex inside bp_video_find_xoverlay.

https://bugzilla.gnome.org/show_bug.cgi?id=632114